Simplify reproduction log summarizer formatting and tests